# fastgraphql

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/workflows/: gh-pages.yaml  publish.yaml  test.yaml
docs/: api-pages.py  logo.py  mkdocs.yml
docs/pages/: index.md  index.md.bak  under-construction.md
docs/pages/stylesheets/: extra.css
docs/pages/tutorial/: complex-classes.md  complex-types.md  data-types.md  index.md  parameters.md  query-mutation.md  simple-classes.md
docs/src/tutorial/complex-classes/: main.py
docs/src/tutorial/index/: tutorial001.py
docs/src/tutorial/parameters/: main.py  reuse.py
docs/src/tutorial/query-mutation/: main.py
docs/src/tutorial/simple-classes/: main.py  models.py
examples/my-first-api/: main.py
fastgraphql/: __init__.py  application.py  ariadne.py  context.py  exceptions.py  factory.py  fastapi.py  injection.py  scalars.py  schema.py  sqlalchemy.py  types.py  utils.py
fastql/: application.py  factory.py  schema.py
tests/: README.md  utils.py
tests/fastgraphql/: test_ariadne_fastapi_integration.py  test_custom_field_name.py  test_custom_scalar.py  test_input_rendering.py  test_input_resolver_with_ariadne.py  test_mutation.py  test_name_conflict.py  test_query.py  test_type_input.py  test_type_rendering.py  test_utils.py
tests/fastgraphql/application/: test_date_formats.py  test_runtime_exception.py
tests/fastgraphql/ariadne/: test_date_types.py  test_fastapi_integration.py  test_input_resolver.py
tests/fastgraphql/dependency_injection/: test_depends.py
tests/fastgraphql/factory/: test_cyclic_refenrece.py  test_forward_reference.py  test_function_parsing.py  test_generic_type_parsing.py  test_inheritance.py  test_type_parsing.py
tests/fastgraphql/sqlalchemy/: test_cyclic_refenrece.py  test_inheritance.py  test_query_expression.py  test_sql_model_rendering.py
tests/fastql/: test_input_rendering.py  test_type_rendering.py
