[tool.poetry]
name = "fastgraphql"
version = "0.0.1"
description = "FastGraphQL is intended to help developer create code driven GraphQL APIs"
authors = ["Hugo Wruck Schneider <hugowschneider@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pyflakes = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"
testpaths = ["./tests"]