[tool.poetry]
name = "fastgraphql"
version = "0.0.5"
description = "FastGraphQL is intended to help developer create code driven GraphQL APIs"
authors = ["Hugo Wruck Schneider <hugowschneider@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hugowschneider/fastgraphql"
keywords = ["graphql", "fastgraphql"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
ariadne = {version = "^0.16.1", optional = true}
fastapi = {version = "^0.85.0", optional = true}
SQLAlchemy = {extras = ["mypy"], version = "^1.4.41", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pyflakes = "^2.5.0"
pytest-mock = "^3.8.2"
autoflake = "^1.6.1"
requests = "^2.28.1"


[tool.poetry.extras]
ariadne = ["ariadne"]
sqlalchemy = ["sqlalchemy"]
fastapi = ["fastapi"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
allow_subclassing_any = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"
testpaths = ["./tests"]

[tool.coverage.run]
relative_files = true
