[tool.poetry]
name = "fastgraphql"
version = "0.0.12"
description = "FastGraphQL is intended to help developer create code driven GraphQL APIs"
authors = ["Hugo Wruck Schneider <hugowschneider@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hugowschneider/fastgraphql"
keywords = ["graphql", "fastgraphql"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^1.10.2"
ariadne = {version = ">=0.14, < 1.0", optional = true}
fastapi = {version = ">=0.70, < 1.0", optional = true}
SQLAlchemy = {extras = ["mypy"], version = "1.4.*", optional = true}
graphql-core = ">= 3.0, < 4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.2.0"
pytest-cov = ">=3.0.0"
pytest-mock = "^3.8.2"
autoflake = "^1.6.1"
requests = "^2.28.1"
isort = "^5.10.1"
flake8 = "^6.0.0"
flake8-cognitive-complexity = "^0.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.5.10"
svgwrite = "^1.4.3"
termynal = "^0.2.0"
mkdocs-glightbox = "^0.3.1"
mkdocstrings = {extras = ["crystal", "python"], version = "^0.19.1"}
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-section-index = "^0.3.4"

[tool.poetry.extras]
ariadne = ["ariadne"]
sqlalchemy = ["sqlalchemy"]
fastapi = ["fastapi"]
all = ["ariadne", "sqlalchemy", "fastapi"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
allow_subclassing_any = true

[[tool.mypy.overrides]]
module = ["svgwrite.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-vv",
]
xfail_strict = true
junit_family = "xunit2"
testpaths = ["./tests"]

[tool.coverage.run]
relative_files = true

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true
